# OpenGL_VSM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindGLFW3.cmake
includes/glad/: glad.h
lib/: glfw3.lib
src/: OpenGL_VSM.cpp  glad.c
src/shaders/: debugShader.frag  depthShader.frag  mainShader.frag  mainShader.vert  varianceCalculate.frag
